# sqlmodel_rust

./: .gitignore  AGENTS.md  Cargo.toml  EXISTING_SQLMODEL_STRUCTURE.md  FEATURE_PARITY.md  PLAN_TO_PORT_SQLMODEL_TO_RUST.md  README.md  SESSION_TODO.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
crates/sqlmodel/: Cargo.toml
crates/sqlmodel-console/: Cargo.toml
crates/sqlmodel-console/benches/: console_bench.rs
crates/sqlmodel-console/examples/: console_demo.rs  progress_demo.rs  schema_visualization.rs
crates/sqlmodel-console/src/: console.rs  lib.rs  mode.rs  theme.rs
crates/sqlmodel-console/tests/: agent_compat.rs  fixtures_tests.rs
crates/sqlmodel-core/src/: error.rs  field.rs  lib.rs  model.rs  relationship.rs  row.rs  tracked.rs  validate.rs  value.rs
crates/sqlmodel-frankensqlite/: Cargo.toml
crates/sqlmodel-frankensqlite/src/: connection.rs
crates/sqlmodel-macros/: Cargo.toml
crates/sqlmodel-macros/src/: lib.rs  parse.rs  validate_derive.rs
crates/sqlmodel-mysql/: Cargo.toml  README.md
crates/sqlmodel-pool/: Cargo.toml
crates/sqlmodel-postgres/: Cargo.toml
crates/sqlmodel-postgres/src/: async_connection.rs  connection.rs  lib.rs
crates/sqlmodel-postgres/src/auth/: scram.rs
crates/sqlmodel-postgres/src/protocol/: messages.rs  reader.rs  writer.rs
crates/sqlmodel-postgres/tests/: postgres_integration.rs
crates/sqlmodel-query/: Cargo.toml
crates/sqlmodel-session/: Cargo.toml
crates/sqlmodel-session/src/: change_tracker.rs  flush.rs  identity_map.rs  lib.rs  n1_detection.rs  unit_of_work.rs
(+61 files in other folders)
