[package]
name = "sqlmodel-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "PostgreSQL driver for SQLModel Rust"

[lints]
workspace = true

[dependencies]
sqlmodel-core.workspace = true
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
