[package]
name = "sqlmodel-session"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Session and Unit of Work for SQLModel Rust"
license = "MIT OR Apache-2.0"

[dependencies]
sqlmodel-core = { path = "../sqlmodel-core" }
sqlmodel-query = { path = "../sqlmodel-query" }
asupersync = { path = "/data/projects/asupersync" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
