[package]
name = "sqlmodel-session"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Session and Unit of Work for SQLModel Rust"

[lints]
workspace = true

[dependencies]
sqlmodel-core.workspace = true
sqlmodel-query.workspace = true
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
